--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watchAll --cache"
+    "test": "jest --watchAll --cache",
+    "test:ci": "jsest"
   },
   "jest": {
     "preset": "ts-jest",
